--- a/IA_Python/movie1.ipynb
+++ b/IA_Python/movie1.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,9 @@
       "8. Music\n",
       "9. Adventure\n",
       "10. Mystery\n",
-      "11. Sci-Fi\n"
+      "11. Sci-Fi\n",
+      "12. Mystery\n",
+      "13. Family\n"
      ]
     },
     {
@@ -190,13 +192,13 @@
      "output_type": "stream",
      "text": [
       "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-      "Recomendações de séries/animes no gênero 'Sci-Fi':\n",
-      "                     name\n",
-      "40            The Witcher\n",
-      "17   The Umbrella Academy\n",
-      "83         Under the Dome\n",
-      "107        Jujutsu Kaisen\n",
-      "52           Black Mirror\n"
+      "Recomendações de séries/animes no gênero 'Family':\n",
+      "                      name\n",
+      "63   Malcolm in the Middle\n",
+      "113  SpongeBob SquarePants\n",
+      "51          Anne with an E\n",
+      "15            The Simpsons\n",
+      "170               S Club 7\n"
      ]
     }
    ],
@@ -228,7 +230,7 @@
     "    return recommendations\n",
     "\n",
     "genre_dict = {\n",
-    "    1: 'Action',2: 'Drama',3: 'Fantasy',4: 'Documentary',5: 'Comedy',6: 'Animation',7: 'Crime',8: 'Music',9: 'Adventure',10: 'Mystery',11: 'Sci-Fi'\n",
+    "    1: 'Action',2: 'Drama',3: 'Fantasy',4: 'Documentary',5: 'Comedy',6: 'Animation',7: 'Crime',8: 'Music',9: 'Adventure',10: 'Mystery',11: 'Sci-Fi', 12: 'Mystery', 13: 'Family'\n",
     "}\n",
     "\n",
     "print(\"Selecione um gênero:\")\n",
